# bigquery-client

./: Cargo.toml  README.md  validation.http
src/: lib.rs  main.rs
src/gcloud/: client.rs  file_client.rs  mod.rs
src/gcloud/bigquery/: mod.rs
src/gcloud/bigquery/table/: create_entities.rs  insert_entities.rs  mod.rs
src/gcloud/crudable/: mod.rs  results.rs
