[package]
name = "bigquery-client-rust"
version = "0.1.0"
authors = ["Andre Claudino <andre.claudino@b2wdigital.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "^1.0.123", features = ["derive"]}
serde_json = "^1.0.61"

futures = "0.3"
gouth = "0.1.2"

tokio = { version = "1.1.1", features = ["full"] }
