[package]
name = "bigquery-client"
version = "0.2.0-alpha"
authors = ["Andre Claudino <claudino@d2x.com.br>", "Pedro Braga <pedro.rangel.braga@gmail.com>", "Romulo Tavares <tavaresrft@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "An idiomatic library for Google BigQuery in Rust"
repository = "https://github.com/andreclaudino/bigquery-client"
readme = "README.md"

[lib]
path = "src/lib.rs"
name = "bigquery_client"
edition = "2018"
crate_type = ["staticlib", "lib", "cdylib"]


[dependencies]
serde = { version = "^1.0.123", features = ["derive"]}
serde_json = "^1.0.61"

futures = "0.3"
gouth = "0.1.2"

chrono = { version = "0.4", features= ["serde", "alloc", "unstable-locales"] }
uuid = { version = "0.8", features = ["serde", "v4"] }
reqwest = { version = "0.11", features = ["json", "blocking"] }
tokio = { version = "1.1.1", features = ["full"] }
